--- a/_includes/header_mg.html
+++ b/_includes/header_mg.html
@@ -1,79 +1,79 @@
-<header class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/mg"><i class="ion-pound"></i>MG</a>
-        </div>
+<div class="navbar-header">
+    <a type="button" class="navbar-toggle collapsed"  href="#my-menu">
+        <i class="ion-android-apps"></i>
+    </a>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a target="_blank" href="https://mgonline.atlassian.net/secure/RapidBoard.jspa?rapidView=145">Jira</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">code <i class="ion-arrow-down-b"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Pull Requests - MGO</a></li>
-                        <li><a href="#">Pull Requests - Pattern Library</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Bamboo Builds - Pattern Library</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">dev <i class="ion-arrow-down-b"></i></a>
-                    <ul class="dropdown-menu">
-                        <li class="dropdown-header">Production</li>
-                        <li><a href="#">MGO</a></li>
-                        <li><a href="#">Pattern Library (AWS)</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li class="dropdown-header">Local</li>
-                        <li><a href="#">MGO</a></li>
-                        <li><a href="#">Staging</a></li>
-                        <li><a href="#">Pattern Library</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">D2 - MGO</a></li>
-                        <li><a href="#">D2 - Staging</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">D3 - MGO</a></li>
-                        <li><a href="#">D3 - Staging</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Q2 - MGO</a></li>
-                        <li><a href="#">Q2 - Staging</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Q3 - MGO</a></li>
-                        <li><a href="#">Q3 - Staging</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Links <i class="ion-arrow-down-b"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Confluence</a></li>
-                        <li><a href="#">PPM Time Entry</a></li>
-                        <li><a href="#">Robert Half Time Entry</a></li>
-                        <li><a href="#">Identity IQ</a></li>
-                    </ul>
-                </li>
+    <a class="navbar-brand"
+       href="/mg"
+       data-0="color:rgba(0,0,0,0.87);font-size:1.5em;"
+       data-100="color:rgba(255, 255, 255, 1);font-size:1em;"><i class="ion-pound"></i>MG</a>
+</div>
+
+<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+        <li>
+            <a data-0="color:rgba(0, 0, 0, 0.87);font-size:14px;"
+               data-100="color:rgba(255, 255, 255, 1);font-size:12px;"
+               target="_blank"
+               href="https://mgonline.atlassian.net/secure/RapidBoard.jspa?rapidView=145">Gold</a>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">code <i class="ion-arrow-down-b"></i></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">Pull Requests - MGO</a></li>
+                <li><a href="#">Pull Requests - Pattern Library</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Bamboo Builds - Pattern Library</a></li>
             </ul>
-            <!--<form class="navbar-form navbar-left">-->
-                <!--<div class="form-group">-->
-                    <!--<input type="text" class="form-control" placeholder="Search">-->
-                <!--</div>-->
-                <!--<button type="submit" class="btn btn-default">Submit</button>-->
-            <!--</form>-->
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sprints <i class="ion-arrow-down-b"></i></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">sprint list</a></li>
-                    </ul>
-                </li>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">dev <i class="ion-arrow-down-b"></i></a>
+            <ul class="dropdown-menu">
+                <li class="dropdown-header">Production</li>
+                <li><a href="#">MGO</a></li>
+                <li><a href="#">Pattern Library (AWS)</a></li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Local</li>
+                <li><a href="#">MGO</a></li>
+                <li><a href="#">Staging</a></li>
+                <li><a href="#">Pattern Library</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">D2 - MGO</a></li>
+                <li><a href="#">D2 - Staging</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">D3 - MGO</a></li>
+                <li><a href="#">D3 - Staging</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Q2 - MGO</a></li>
+                <li><a href="#">Q2 - Staging</a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="#">Q3 - MGO</a></li>
+                <li><a href="#">Q3 - Staging</a></li>
             </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</header>
+        </li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Links <i class="ion-arrow-down-b"></i></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">Confluence</a></li>
+                <li><a href="#">PPM Time Entry</a></li>
+                <li><a href="#">Robert Half Time Entry</a></li>
+                <li><a href="#">Identity IQ</a></li>
+            </ul>
+        </li>
+    </ul>
+    <!--<form class="navbar-form navbar-left">-->
+        <!--<div class="form-group">-->
+            <!--<input type="text" class="form-control" placeholder="Search">-->
+        <!--</div>-->
+        <!--<button type="submit" class="btn btn-default">Submit</button>-->
+    <!--</form>-->
+    <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sprints <i class="ion-arrow-down-b"></i></a>
+            <ul class="dropdown-menu">
+                <li><a href="#">sprint list</a></li>
+            </ul>
+        </li>
+    </ul>
+</div><!-- /.navbar-collapse -->
