refactor dir structure 2

--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -4,11 +4,11 @@
 	<div class="container-fluid">
 
 		{% if page.external %}
-			{% include header_external.html %}
+			{% include core/headers/header_external.html %}
 		{% endif %}
 
 		{% if page.mg %}
-			{% include header_mg.html %}
+			{% include core/headers/header_mg.html %}
 		{% endif %}
 
 	</div>
