--- a/_includes/core/js.html
+++ b/_includes/core/js.html
@@ -12,7 +12,7 @@
 <script src="/js/kerning.min.js"></script>
 <script src="/js/clipboard.min.js"></script>
 
-{% include google_analytics.html %}
+{% include core/google_analytics.html %}
 
 
 <!-- CUSTOM -->
