refactor dir structure 3

--- a/_includes/core/header.html
+++ b/_includes/core/header.html
@@ -3,12 +3,10 @@
 		data-100="background:rgba(0,0,0,0.87);border-bottom-color:rgba(0,0,0,1);">
 	<div class="container-fluid">
 
-		{% if page.external %}
-			{% include core/headers/header_external.html %}
-		{% endif %}
-
 		{% if page.mg %}
 			{% include core/headers/header_mg.html %}
+		{% else %}
+			{% include core/headers/header_external.html %}
 		{% endif %}
 
 	</div>
