--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <div class="site-wrapper">
       {% include core/off_canvas.html %}
       {% include core/header.html %}
+      <div class="header-spacer" style="width:100%; height:50px;"></div>
 
       <div id="skrollr-body">
 
