fix header and update sprint 50 notes

--- a/_includes/core/headers/header_external.html
+++ b/_includes/core/headers/header_external.html
@@ -1,4 +1,9 @@
-<div class="navbar-header">
+<header class="navbar navbar-default navbar-fixed-top fixed"
+        data-0="background:rgba(0,0,0,0);border-bottom-color:rgba(0,0,0,0);"
+        data-100="background:rgba(0,0,0,0.87);border-bottom-color:rgba(0,0,0,1);">
+    <div class="container-fluid">
+
+        <div class="navbar-header">
     <a type="button" class="navbar-toggle collapsed"  href="#my-menu">
         <i class="ion-android-apps"></i>
     </a>
@@ -38,3 +43,6 @@
         {% endfor %}
     </ul>
 </div>
+
+    </div>
+</header>
