--- a/_includes/core/headers/header_mg.html
+++ b/_includes/core/headers/header_mg.html
@@ -1,21 +1,20 @@
+<header class="navbar navbar-inverse navbar-fixed-top fixed">
+    <div class="container-fluid">
+
+
 <div class="navbar-header">
     <a type="button" class="navbar-toggle collapsed"  href="#my-menu">
         <i class="ion-android-apps"></i>
     </a>
 
     <a class="navbar-brand"
-       href="/mg"
-       data-0="color:rgba(0,0,0,0.87);font-size:1.5em;"
-       data-100="color:rgba(255, 255, 255, 1);font-size:1em;"><i class="ion-pound"></i>MG</a>
+       href="/mg"><i class="ion-pound"></i>MG</a>
 </div>
 
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
         <li>
-            <a data-0="color:rgba(0, 0, 0, 0.87);font-size:14px;"
-               data-100="color:rgba(255, 255, 255, 1);font-size:12px;"
-               target="_blank"
-               href="https://mgonline.atlassian.net/secure/RapidBoard.jspa?rapidView=145">Gold</a>
+            <a href="https://mgonline.atlassian.net/secure/RapidBoard.jspa?rapidView=145">Gold</a>
         </li>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">code <i class="ion-arrow-down-b"></i></a>
@@ -52,7 +51,7 @@
             </ul>
         </li>
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Links <i class="ion-arrow-down-b"></i></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <i class="ion-arrow-down-b"></i></a>
             <ul class="dropdown-menu">
                 <li><a href="#">Confluence</a></li>
                 <li><a href="#">PPM Time Entry</a></li>
@@ -68,7 +67,6 @@
         <!--<button type="submit" class="btn btn-default">Submit</button>-->
     <!--</form>-->
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sprints <i class="ion-arrow-down-b"></i></a>
 
@@ -83,3 +81,6 @@
         </li>
     </ul>
 </div><!-- /.navbar-collapse -->
+
+    </div>
+</header>
