add data and clipboard toastr

--- a/_includes/core/headers/header_mg.html
+++ b/_includes/core/headers/header_mg.html
@@ -59,6 +59,13 @@
                 <li><a href="#">Identity IQ</a></li>
             </ul>
         </li>
+        <li>
+            <a href="#data" class="data-modal-btn"
+               data-toggle="modal"
+               data-target="#dataModal">
+                <i class="ion-ios-box"></i>&nbsp;&nbsp;data
+            </a>
+        </li>
     </ul>
     <!--<form class="navbar-form navbar-left">-->
         <!--<div class="form-group">-->
