--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,9 @@
           {% include core/footer.html %}
           {% include modals/search_modal.html %}
       {% endif %}
+
+      {% include core/modals.html %}
+
       {% include core/js.html %}
 
   </body>
