changed header links to lowercase from uppercase

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -69,7 +69,7 @@ body {
       font-weight: 400;
       font-size: 1.1em;
       outline: 0;
-      text-transform: uppercase !important;
+      text-transform: lowercase !important;
 
       &.navbar-brand {
         text-transform: uppercase !important;
